--- a/local.properties
+++ b/local.properties
@@ -7,5 +7,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Mon Aug 24 16:50:02 PDT 2015
-sdk.dir=/Users/Amit_Gupta/Library/Android/sdk
+#Fri Apr 22 00:41:52 PDT 2016
+sdk.dir=/Users/Amit_Gupta/.android-sdk
